test: harden the roaring kernel provider and facet grouping after the quality pass
Tests. `FacetReferenceIndexTest` gains a suite for the group-id keyed
`getFacetReferencingEntityIdsFormula` (one formula per group, a facet in several groups, the `null`
key of the ungrouped index, bitmap alignment, skipped unindexed facets, encounter order) and an
allocation-differential test for its bucket map; the roaring suite gains witnesses for the
pigeonhole shortcut, the sparse policy inside `mergeBulk`, the uncapped iterator `naive_or`, the
reflective contract the provider loads its vector class through, partial-vector tails (1, 3, 7, 13
and 1021 words), the `out == b` aliasing, a run-container hash collision counterpart, the length
guard of the extraction helpers, and `ScalarArrayKernelsTest` for the sparse-container seam.

Fixes. The provider summary named `-Devita.roaring.vector=false` as the reason when the property
read itself had thrown; a caught throwable now displaces the gate for both kernel families. A build
could stay green with the vector kernels never selected; `-Devita.roaring.vector.require=true`
turns a silent scalar fallback into a test failure, deliberately opt-in because narrow-vector
runners are entitled to the scalar answer. The facet bucket map was sized by the requested facet
count instead of the group count (a 20,000-facet `facetHaving` allocated 133,480 bytes for two
buckets; now 2,408). `Util.unsignedLocalIntersect2by2` is package-private again;
`ScalarArrayKernels` delegates to the public `unsignedIntersect2by2` dispatcher instead.

Three findings are pinned as documented limitations rather than fixed: the min-length clamp that
`ior`/`ixor`/`or` no longer apply (a test shows no caller can reach the state it defended — the
throw comes from upstream `iand`), the inherited `RunContainer.equals(ArrayContainer)` /
`hashCode` divergence, and a facet indexed both grouped and ungrouped being reported only under
its group (pre-existing behaviour of the `grou